--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -101,15 +101,6 @@ a.desc:after {
     border: none;
 }
 
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
-}
-
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
     text-decoration: none;
@@ -121,4 +112,43 @@ a.desc:after {
 
 #chatNotif {
     color: red;
+}
+
+.stats {
+  text-align:center;
+  text-shadow:1px 1px 0px #fff;
+  margin-top:25px;  
+  
+}
+.stats li{
+  width:125px; 
+}
+.stats span{
+  font-family:Helvetica;
+  font-weight:bold;
+  text-shadow:1px 1px 0px #fff;
+  font-size:4em;
+  
+  display:block;
+  line-height:1em;
+}
+
+
+@media(max-width:767px) {
+    .nav li > form > button.logout {
+        display:block;
+        text-align: left;
+        width: 100%;
+        padding: 10px 15px;
+    }
+    
+  .profile img{
+    width:75px;
+  }
+  .profile h2{
+    font-size:1.7em;
+  }
+  .stats span{
+    font-size: 2em;
+  }
 }
